// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should GenreItem render correctly Active item 1`] = `
<li
  className="catalog__genres-item catalog__genres-item--active"
>
  <a
    className="catalog__genres-link"
    href="/"
    onClick={[Function]}
  >
    All
  </a>
</li>
`;

exports[`Should GenreItem render correctly Not active item 1`] = `
<li
  className="catalog__genres-item "
>
  <a
    className="catalog__genres-link"
    href="/"
    onClick={[Function]}
  >
    All
  </a>
</li>
`;
